Project setup, add .py file, CNN is working but the error is not satisfactory

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -27,7 +27,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
     "## Step 0: Load The Data"
    ]
   },
@@ -44,9 +43,9 @@
     "\n",
     "# TODO: Fill this in based on where you saved the training and testing data\n",
     "\n",
-    "training_file = ?\n",
-    "validation_file=?\n",
-    "testing_file = ?\n",
+    "training_file = \"./traffic-signs-data/train.p\"\n",
+    "validation_file=\"./traffic-signs-data/valid.p\"\n",
+    "testing_file = \"./traffic-signs-data/test.p\"\n",
     "\n",
     "with open(training_file, mode='rb') as f:\n",
     "    train = pickle.load(f)\n",
@@ -64,8 +63,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "## Step 1: Dataset Summary & Exploration\n",
     "\n",
     "The pickled data is a dictionary with 4 key/value pairs:\n",
@@ -89,24 +86,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "### Replace each question mark with the appropriate value. \n",
     "### Use python, pandas or numpy methods rather than hard coding the results\n",
+    "import numpy as np\n",
     "\n",
     "# TODO: Number of training examples\n",
-    "n_train = ?\n",
+    "n_train = X_train.shape[0]\n",
     "\n",
     "# TODO: Number of testing examples.\n",
-    "n_test = ?\n",
+    "n_test = X_test.shape[0]\n",
     "\n",
     "# TODO: What's the shape of an traffic sign image?\n",
-    "image_shape = ?\n",
+    "image_shape = X_train.shape[1:]\n",
     "\n",
     "# TODO: How many unique classes/labels there are in the dataset.\n",
-    "n_classes = ?\n",
+    "n_classes = np.unique(y_train).shape[0]\n",
     "\n",
     "print(\"Number of training examples =\", n_train)\n",
     "print(\"Number of testing examples =\", n_test)\n",
@@ -134,9 +132,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -144,15 +142,27 @@
     "### Feel free to use as many code cells as needed.\n",
     "import matplotlib.pyplot as plt\n",
     "# Visualizations will be shown in the notebook.\n",
-    "%matplotlib inline"
+    "get_ipython().magic('matplotlib inline')\n",
+    "\n",
+    "#print(y_train[index])\n",
+    "\n",
+    "grid_len = 8\n",
+    "\n",
+    "plt.figure(figsize=(grid_len,grid_len))\n",
+    " \n",
+    "for i in range(1,grid_len*grid_len+1):\n",
+    "    index = random.randint(0, len(X_train))\n",
+    "    image = X_train[index].squeeze()\n",
+    "   \n",
+    "    plt.subplot(grid_len,grid_len,i)\n",
+    "    plt.imshow(image)\n",
+    "     "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----\n",
-    "\n",
     "## Step 2: Design and Test a Model Architecture\n",
     "\n",
     "Design and implement a deep learning model that learns to recognize traffic signs. Train and test your model on the [German Traffic Sign Dataset](http://benchmark.ini.rub.de/?section=gtsrb&subsection=dataset).\n",
@@ -187,33 +197,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "### Preprocess the data here. Preprocessing steps could include normalization, converting to grayscale, etc.\n",
-    "### Feel free to use as many code cells as needed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Model Architecture"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "### Define your architecture here.\n",
-    "### Feel free to use as many code cells as needed."
+    "from sklearn.utils import shuffle\n",
+    "\n",
+    "X_train, y_train = shuffle(X_train, y_train)\n",
+    "\n",
+    "### Preprocess the data here. Preprocessing steps could include normalization, converting to grayscale, etc.\n",
+    "### Feel free to use as many code cells as needed.\n",
+    "\n",
+    "\n",
+    "# ### Model Architecture\n",
+    "\n",
+    "\n",
+    "    \n",
+    "import tensorflow as tf\n",
+    "from tensorflow.contrib.layers import flatten\n",
+    "\n",
+    "EPOCHS = 2\n",
+    "BATCH_SIZE = 128\n",
+    "\n",
+    "\n",
+    "def LeNet(x):    \n",
+    "    # Arguments used for tf.truncated_normal, randomly defines variables for the weights and biases for each layer\n",
+    "    mu = 0\n",
+    "    sigma = 0.1\n",
+    "    \n",
+    "    # SOLUTION: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
+    "    conv1_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 3, 6), mean = mu, stddev = sigma))\n",
+    "    conv1_b = tf.Variable(tf.zeros(6))\n",
+    "    conv1   = tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
+    "\n",
+    "    # SOLUTION: Activation.\n",
+    "    conv1 = tf.nn.relu(conv1)\n",
+    "\n",
+    "    # SOLUTION: Pooling. Input = 28x28x6. Output = 14x14x6.\n",
+    "    conv1 = tf.nn.max_pool(conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # SOLUTION: Layer 2: Convolutional. Output = 10x10x16.\n",
+    "    conv2_W = tf.Variable(tf.truncated_normal(shape=(5, 5, 6, 16), mean = mu, stddev = sigma))\n",
+    "    conv2_b = tf.Variable(tf.zeros(16))\n",
+    "    conv2   = tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    conv2 = tf.nn.relu(conv2)\n",
+    "\n",
+    "    # SOLUTION: Pooling. Input = 10x10x16. Output = 5x5x16.\n",
+    "    conv2 = tf.nn.max_pool(conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='VALID')\n",
+    "\n",
+    "    # SOLUTION: Flatten. Input = 5x5x16. Output = 400.\n",
+    "    fc0   = flatten(conv2)\n",
+    "    \n",
+    "    # SOLUTION: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
+    "    fc1_W = tf.Variable(tf.truncated_normal(shape=(400, 120), mean = mu, stddev = sigma))\n",
+    "    fc1_b = tf.Variable(tf.zeros(120))\n",
+    "    fc1   = tf.matmul(fc0, fc1_W) + fc1_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    fc1    = tf.nn.relu(fc1)\n",
+    "\n",
+    "    # SOLUTION: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
+    "    fc2_W  = tf.Variable(tf.truncated_normal(shape=(120, 84), mean = mu, stddev = sigma))\n",
+    "    fc2_b  = tf.Variable(tf.zeros(84))\n",
+    "    fc2    = tf.matmul(fc1, fc2_W) + fc2_b\n",
+    "    \n",
+    "    # SOLUTION: Activation.\n",
+    "    fc2    = tf.nn.relu(fc2)\n",
+    "\n",
+    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, n_classes), mean = mu, stddev = sigma))\n",
+    "    fc3_b  = tf.Variable(tf.zeros(n_classes))\n",
+    "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
+    "    \n",
+    "    return logits\n",
+    "\n",
+    "\n",
+    "x = tf.placeholder(tf.float32, (None, 32, 32, 3))\n",
+    "y = tf.placeholder(tf.int32, (None))\n",
+    "one_hot_y = tf.one_hot(y, n_classes)\n",
+    "\n",
+    "rate = 0.001\n",
+    "\n",
+    "logits = LeNet(x)\n",
+    "cross_entropy = tf.nn.softmax_cross_entropy_with_logits(logits, one_hot_y)\n",
+    "loss_operation = tf.reduce_mean(cross_entropy)\n",
+    "optimizer = tf.train.AdamOptimizer(learning_rate = rate)\n",
+    "training_operation = optimizer.minimize(loss_operation)\n",
+    "\n",
+    "\n",
+    "\n",
+    "correct_prediction = tf.equal(tf.argmax(logits, 1), tf.argmax(one_hot_y, 1))\n",
+    "accuracy_operation = tf.reduce_mean(tf.cast(correct_prediction, tf.float32))\n",
+    "saver = tf.train.Saver()\n",
+    "\n",
+    "def evaluate(X_data, y_data):\n",
+    "    num_examples = len(X_data)\n",
+    "    total_accuracy = 0\n",
+    "    sess = tf.get_default_session()\n",
+    "    for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "        batch_x, batch_y = X_data[offset:offset+BATCH_SIZE], y_data[offset:offset+BATCH_SIZE]\n",
+    "        accuracy = sess.run(accuracy_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "        total_accuracy += (accuracy * len(batch_x))\n",
+    "    return total_accuracy / num_examples"
    ]
   },
   {
@@ -233,9 +322,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -243,15 +332,43 @@
     "### Calculate and report the accuracy on the training and validation set.\n",
     "### Once a final model architecture is selected, \n",
     "### the accuracy on the test set should be calculated and reported as well.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    num_examples = len(X_train)\n",
+    "    \n",
+    "    print(\"Training...\")\n",
+    "    print()\n",
+    "    for i in range(EPOCHS):\n",
+    "        X_train, y_train = shuffle(X_train, y_train)\n",
+    "        for offset in range(0, num_examples, BATCH_SIZE):\n",
+    "            end = offset + BATCH_SIZE\n",
+    "            batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
+    "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y})\n",
+    "            \n",
+    "        validation_accuracy = evaluate(X_test, y_test)\n",
+    "        print(\"EPOCH {} ...\".format(i+1))\n",
+    "        print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
+    "        print()\n",
+    "        \n",
+    "    saver.save(sess, './lenet')\n",
+    "    print(\"Model saved\")\n",
+    "\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
+    "\n",
+    "    test_accuracy = evaluate(X_test, y_test)\n",
+    "    print(\"Test Accuracy = {:.3f}\".format(test_accuracy))\n",
+    "    "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
     "## Step 3: Test a Model on New Images\n",
     "\n",
     "To give yourself more insight into how your model is working, download at least five pictures of German traffic signs from the web and use your model to predict the traffic sign type.\n",
@@ -270,12 +387,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "    \n",
     "### Load the images and plot them here.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "\n",
+    "plt.figure(figsize=(1,1))\n",
+    "plt.imshow(X_test[1])\n",
+    "print(y_test[1])\n",
+    "\n",
+    "plt.figure(figsize=(1,1))\n",
+    "plt.imshow(X_test[2])\n",
+    "print(y_test[3])\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "     saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
+    " #    y = LeNet(X_test[1:3])\n",
+    "     argmax = sess.run( tf.argmax(logits, 1), feed_dict={x:  X_test[1:3], y: y_test[1:3]})\n",
+    "     pred = sess.run(correct_prediction, feed_dict={x:  X_test[1:3], y: y_test[1:3]})\n",
+    "     \n",
+    "     print(argmax)\n",
+    "     print(pred)\n",
+    "   #  sess.run( logits, feed_dict={x: X_test[1:3]})\n",
+    "   "
    ]
   },
   {
@@ -287,9 +424,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -307,9 +444,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -369,9 +506,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -383,8 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
+    " \n",
     "## Step 4: Visualize the Neural Network's State with Test Images\n",
     "\n",
     " This Section is not required to complete but acts as an additional excersise for understaning the output of a neural network's weights. While neural networks can be a great learning device they are often referred to as a black box. We can understand what the weights of a neural network look like better by plotting their feature maps. After successfully training your neural network you can see what it's feature maps look like by plotting the output of the network's weight layers in response to a test stimuli image. From these plotted feature maps, it's possible to see what characteristics of an image the network finds interesting. For a sign, maybe the inner network feature maps react with high activation to the sign's boundary outline or to the contrast in the sign's painted symbol.\n",
@@ -400,14 +536,14 @@
     " <p style=\"text-align: center;\"> Your output should look something like this (above)</p> \n",
     " </figcaption>\n",
     "</figure>\n",
-    " <p></p> \n"
+    " <p></p> "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -445,56 +581,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 9\n",
+    "### Question 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Discuss how you used the visual output of your trained network's feature maps to show that it had learned to look for interesting characteristics in traffic sign images\n",
     "\n",
-    "Discuss how you used the visual output of your trained network's feature maps to show that it had learned to look for interesting characteristics in traffic sign images\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Answer:**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "**Answer:**\n",
+    "\n",
     "> **Note**: Once you have completed all of the code implementations and successfully answered each question above, you may finalize your work by exporting the iPython Notebook as an HTML document. You can do this by using the menu above and navigating to  \\n\",\n",
-    "    \"**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    \"**File -> Download as -> HTML (.html)**. Include the finished document along with this notebook as your submission.\n",
+    "\n",
     "### Project Writeup\n",
     "\n",
     "Once you have completed the code implementation, document your results in a project writeup using this [template](https://github.com/udacity/CarND-Traffic-Sign-Classifier-Project/blob/master/writeup_template.md) as a guide. The writeup can be in a markdown or pdf file. "
    ]
   }
  ],
- "metadata": {
-  "anaconda-cloud": {},
-  "kernelspec": {
-   "display_name": "Python [default]",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.2"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
