--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -40,8 +40,7 @@
    "source": [
     "# Load pickled data\n",
     "import pickle\n",
-    "\n",
-    "# TODO: Fill this in based on where you saved the training and testing data\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "training_file = \"./traffic-signs-data/train.p\"\n",
     "validation_file=\"./traffic-signs-data/valid.p\"\n",
@@ -56,7 +55,9 @@
     "    \n",
     "X_train, y_train = train['features'], train['labels']\n",
     "X_valid, y_valid = valid['features'], valid['labels']\n",
-    "X_test, y_test = test['features'], test['labels']"
+    "X_test, y_test = test['features'], test['labels']\n",
+    "\n",
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_train, y_train, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -94,19 +95,15 @@
     "### Use python, pandas or numpy methods rather than hard coding the results\n",
     "import numpy as np\n",
     "\n",
-    "# TODO: Number of training examples\n",
     "n_train = X_train.shape[0]\n",
-    "\n",
-    "# TODO: Number of testing examples.\n",
+    "n_valid = X_valid.shape[0]\n",
     "n_test = X_test.shape[0]\n",
-    "\n",
-    "# TODO: What's the shape of an traffic sign image?\n",
     "image_shape = X_train.shape[1:]\n",
     "\n",
-    "# TODO: How many unique classes/labels there are in the dataset.\n",
     "n_classes = np.unique(y_train).shape[0]\n",
     "\n",
     "print(\"Number of training examples =\", n_train)\n",
+    "print(\"Number of validation examples =\", n_valid)\n",
     "print(\"Number of testing examples =\", n_test)\n",
     "print(\"Image data shape =\", image_shape)\n",
     "print(\"Number of classes =\", n_classes)"
@@ -138,15 +135,14 @@
    },
    "outputs": [],
    "source": [
-    "### Data exploration visualization code goes here.\n",
-    "### Feel free to use as many code cells as needed.\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import random \n",
+    "\n",
     "# Visualizations will be shown in the notebook.\n",
     "get_ipython().magic('matplotlib inline')\n",
     "\n",
-    "#print(y_train[index])\n",
-    "\n",
-    "grid_len = 8\n",
+    "grid_len = 4\n",
     "\n",
     "plt.figure(figsize=(grid_len,grid_len))\n",
     " \n",
@@ -156,7 +152,27 @@
     "   \n",
     "    plt.subplot(grid_len,grid_len,i)\n",
     "    plt.imshow(image)\n",
-    "     "
+    "    \n",
+    "# histograms of the data\n",
+    "plt.figure(figsize = (16,3))\n",
+    "plt.subplot(131)\n",
+    "n, bins, patches = plt.hist(y_train, n_classes, facecolor='green', alpha=0.75)\n",
+    "plt.xlabel('Labels')\n",
+    "plt.ylabel('No. of samples')\n",
+    "plt.title('Histogram of training samples')\n",
+    "\n",
+    "plt.subplot(132)\n",
+    "n, bins, patches = plt.hist(y_valid, n_classes, facecolor='green', alpha=0.75)\n",
+    "plt.xlabel('Labels')\n",
+    "plt.ylabel('No. of samples')\n",
+    "plt.title('Histogram of validation samples')\n",
+    "\n",
+    "plt.subplot(133)\n",
+    "n, bins, patches = plt.hist(y_test, n_classes, facecolor='green', alpha=0.75)\n",
+    "plt.xlabel('Labels')\n",
+    "plt.ylabel('No. of samples')\n",
+    "plt.title('Histogram of test samples')\n",
+    "plt.show()"
    ]
   },
   {
@@ -203,17 +219,28 @@
    },
    "outputs": [],
    "source": [
+    "### Preprocess the data here. Preprocessing steps could include normalization, converting to grayscale, etc.\n",
+    "\n",
     "from sklearn.utils import shuffle\n",
     "\n",
-    "X_train, y_train = shuffle(X_train, y_train)\n",
-    "\n",
-    "### Preprocess the data here. Preprocessing steps could include normalization, converting to grayscale, etc.\n",
-    "### Feel free to use as many code cells as needed.\n",
-    "\n",
-    "\n",
-    "# ### Model Architecture\n",
-    "\n",
-    "\n",
+    "X_train, y_train = shuffle(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Architecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "    \n",
     "import tensorflow as tf\n",
     "from tensorflow.contrib.layers import flatten\n",
@@ -348,7 +375,7 @@
     "            batch_x, batch_y = X_train[offset:end], y_train[offset:end]\n",
     "            sess.run(training_operation, feed_dict={x: batch_x, y: batch_y})\n",
     "            \n",
-    "        validation_accuracy = evaluate(X_test, y_test)\n",
+    "        validation_accuracy = evaluate(X_valid, y_valid)\n",
     "        print(\"EPOCH {} ...\".format(i+1))\n",
     "        print(\"Validation Accuracy = {:.3f}\".format(validation_accuracy))\n",
     "        print()\n",
