Add train accuracy to the visible results

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -885,6 +885,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Accuracy = 0.995\n"
+     ]
+    }
+   ],
+   "source": [
+    "with tf.Session() as sess:\n",
+    "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
+    "\n",
+    "    test_accuracy = evaluate(X_train_processed, y_train)\n",
+    "    print(\"Train Accuracy = {:.3f}\".format(test_accuracy))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
