Model layers info change

--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -362,7 +362,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "### Image normalization and grayscale conversion"
    ]
@@ -552,7 +555,7 @@
     "    # SOLUTION: Activation.\n",
     "    fc2    = tf.nn.relu(fc2)\n",
     "    \n",
-    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 10.\n",
+    "    # SOLUTION: Layer 5: Fully Connected. Input = 84. Output = 43.\n",
     "    fc3_W  = tf.Variable(tf.truncated_normal(shape=(84, n_classes), mean = mu, stddev = sigma))\n",
     "    fc3_b  = tf.Variable(tf.zeros(n_classes))\n",
     "    logits = tf.matmul(fc2, fc3_W) + fc3_b\n",
@@ -888,7 +891,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
    },
    "outputs": [
     {
